Use toList() directly in more places